tests/error/10_skill_missing_method.mire
import std

pub skill Printable {
}

pub fn main: () {
    use dasu("test")
}